# FirstCPP

./: CMakeLists.txt  baseitem.cpp  baseitem.h  inventory.cpp  inventory.h  main.cpp  player.cpp  player.h
items/: item_potion.cpp  item_potion.h
